ajustando as chaves do scss e deixando legal

--- a/src/pages/app/index.scss
+++ b/src/pages/app/index.scss
@@ -1,8 +1,13 @@
 
-.App {
+.pagina-App {
   text-align: center;
+
+
+
+  .titulo{
+    color: rgb(211, 95, 12);
+  }
+  
+
 }
 
-.titulo{
-  color: rgb(211, 95, 12);
-}
