--- a/src/pages/contato/index.scss
+++ b/src/pages/contato/index.scss
@@ -1,14 +1,20 @@
 .pagina-contato{
 
     text-align: center;
+
+    .icone{
+
+        width: 800px;
+    }
+    
+    .voltar{
+    
+        font-size: 90px;
+    }
+
+    .titulo{
+        color: #02690f;
+    }
+
 }
 
-.icone{
-
-    width: 800px;
-}
-
-.voltar{
-
-    font-size: 90px;
-}
