--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,71 @@
   font-family: 'roboto'
 }
 
+.pagina{
+background-color: #f5f6fa;
+min-height: 100vh;
 
+.cabecalho{
+
+ h1{
+   color: #606060;
+   font: 600 32px 'roboto';
+  } 
+
+
+padding: 30px 60px;
+background-color: #ffff;
+
+}
+
+.secao{
+
+background-color: #ffff;
+padding: 40px;
+box-shadow: 0px 0px 15px 2px #000;
+margin:30px;
+max-width: 1000px;
+border-radius: 5px;
+margin: 50px 60px;
+font: 600 22px 'roboto';
+
+h1{
+
+color: #606060;
+font: 600 28px 'roboto';
+margin-bottom: 60px; 
+
+}
+
+input, select{
+  border-color: #d1d1d1;
+  border-style: solid;
+  padding: 10px;
+  font:400 22px 'roboto';
+  outline: none;
+  border-radius: 8px;
+  min-width: 400px;
+  color: #606060;
+border-width: 2px ;
+}
+
+button{
+  background-color: #0084ff;
+  color: #fff;
+  padding: 13px 30px;
+  font:500 20px 'roboto';
+  outline: none;
+  border: none;
+  border-radius: 5px;
+
+}
+
+
+}
+
+
+
+}
 
 
 
