--- a/src/pages/eventos/index.scss
+++ b/src/pages/eventos/index.scss
@@ -9,6 +9,18 @@
     align-items: start;
 }
 
+.cabecalho{
+display: flex;
+
+.voltar{
+
+margin-top: 10px;
+margin-right: 10px;
+
+}
+
+}
+
 .grupo{
 display: flex;
 align-items: center;
